--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,13 +16,20 @@ doctest = false
 [lints.rust]
 unsafe_code = "forbid"
 
+[profile.dev]
+debug = 0
+lto = "fat"
+
 [profile.dev.package."*"]
-opt-level = 3
+opt-level = 2
 
 [profile.release]
 opt-level = "s"
 strip = true
 lto = "fat"
+
+[profile.release.package."*"]
+opt-level = "z"
 
 [dependencies]
 ureq = "2.1"
@@ -31,3 +38,5 @@ chrono = "0.4"
 cfg-if = "1.0"
 tl = "0.7"
 roxmltree = "0.19.0"
+thiserror = "1.0.58"
+anyhow = "1.0.81"
