--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,16 +17,16 @@ doctest = false
 unsafe_code = "forbid"
 
 [profile.dev]
-debug = 0
 lto = "fat"
 
 [profile.dev.package."*"]
-opt-level = 2
+opt-level = "s"
 
 [profile.release]
 opt-level = "s"
 strip = true
 lto = "fat"
+codegen-units = 4
 
 [profile.release.package."*"]
 opt-level = "z"
